# cgcourse-examples

./: CMakeLists.txt  COPYING
cmake/: CopyDependencies.cmake  FindFreeImage.cmake  FindGLEW.cmake  FindMITK.cmake  FindWindowsSDK.cmake
include/: camera.h  cpucounter.h  geotypes.h  glextinc.h  glinc.h  glutinc.h  matrix.h  quaternion.h
src/: curves.cpp  dyncubemap.cpp  gravity.cpp  gravity2.cpp  mandelsimp.cpp  mirror.cpp  nurbscurve.cpp  phongshader.cpp  picksquare.cpp  planet.cpp  sierpinski.cpp  sphere.cpp  spheremap.cpp  surface.cpp  texture2d.cpp  transform.cpp
